methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:4: error: value ref is not a member of object java.awt.Color
var rouge:Color=Color.ref;
                      ^